--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,17 +7,18 @@ jobs:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
+      - name: CachePnpm 🛎️
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9.4.0
+
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
       - name: Install and Build 🔧
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-      - run: npm install -g pnpm
-      - run: pnpm install
-      - run: pnpm run build
+        run: |
+          pnpm install
+          pnpm build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
