chore: Add @sola alias for src/utils/sola.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@sola": ["src/utils/sola.ts"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx"],
