--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.6",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -17,13 +18,13 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "oxlint": "^0.6.1",
-    "typescript": "^5.5.3",
-    "unocss": "^0.61.5",
-    "vite": "^5.3.4"
+    "typescript": "^5.5.4",
+    "unocss": "^0.61.7",
+    "vite": "^5.3.5"
   }
 }
