--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.20.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.14",
-    "@types/react": "^18.3.3",
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "oxlint": "^0.6.1",
     "typescript": "^5.5.4",
     "unocss": "^0.61.9",
-    "vite": "^5.3.5"
+    "vite": "^5.4.2"
   }
 }
